manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    autopilot.gke.io/resource-adjustment: '{"input":{"containers":[{"name":"hiedu-sha256-1"}]},"output":{"containers":[{"limits":{"ephemeral-storage":"1Gi"},"requests":{"cpu":"500m","ephemeral-storage":"1Gi","memory":"2Gi"},"name":"hiedu-sha256-1"}]},"computeClassAtAdmission":"Default","modified":true}'
    autopilot.gke.io/warden-version: 32.15.0-gke.8
  labels:
    argocd.argoproj.io/instance: hiedu-argo
    app: hiedu-k8s-deployment
    app.kubernetes.io/managed-by: cloud-console
  name: hiedu-k8s-deployment
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hiedu-k8s-deployment
      app.kubernetes.io/managed-by: cloud-console
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hiedu-k8s-deployment
        app.kubernetes.io/managed-by: cloud-console
    spec:
      containers:
        - env:
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: hiedu-k8s-deployment-config-dci7
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                configMapKeyRef:
                  key: AWS_ACCESS_KEY_ID
                  name: hiedu-k8s-deployment-config-dci7
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                configMapKeyRef:
                  key: AWS_SECRET_ACCESS_KEY
                  name: hiedu-k8s-deployment-config-dci7
            - name: AWS_REGION
              valueFrom:
                configMapKeyRef:
                  key: AWS_REGION
                  name: hiedu-k8s-deployment-config-dci7
            - name: AWS_S3_BUCKET_NAME
              valueFrom:
                configMapKeyRef:
                  key: AWS_S3_BUCKET_NAME
                  name: hiedu-k8s-deployment-config-dci7
            - name: TZ
              valueFrom:
                configMapKeyRef:
                  key: TZ
                  name: hiedu-k8s-deployment-config-dci7
            - name: DB_HOST
              valueFrom:
                configMapKeyRef:
                  key: DB_HOST
                  name: hiedu-k8s-deployment-config-dci7
            - name: DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: DB_PORT
                  name: hiedu-k8s-deployment-config-dci7
            - name: DB_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: DB_DATABASE
                  name: hiedu-k8s-deployment-config-dci7
            - name: DB_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: DB_USERNAME
                  name: hiedu-k8s-deployment-config-dci7
            - name: DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DB_PASSWORD
                  name: hiedu-k8s-deployment-config-dci7
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: hiedu-k8s-deployment-config-dci7
            - name: GOOGLE_CLIENT_ID
              valueFrom:
                configMapKeyRef:
                  key: GOOGLE_CLIENT_ID
                  name: hiedu-k8s-deployment-config-dci7
            - name: GOOGLE_SECRET
              valueFrom:
                configMapKeyRef:
                  key: GOOGLE_SECRET
                  name: hiedu-k8s-deployment-config-dci7
            - name: GOOGLE_REDIRECT_ADDINFO
              valueFrom:
                configMapKeyRef:
                  key: GOOGLE_REDIRECT_ADDINFO
                  name: hiedu-k8s-deployment-config-dci7
            - name: GOOGLE_REDIRECT
              valueFrom:
                configMapKeyRef:
                  key: GOOGLE_REDIRECT
                  name: hiedu-k8s-deployment-config-dci7
            - name: GOOGLE_CALLBACK_URL
              valueFrom:
                configMapKeyRef:
                  key: GOOGLE_CALLBACK_URL
                  name: hiedu-k8s-deployment-config-dci7
            - name: GOOGLE_FAIL
              valueFrom:
                configMapKeyRef:
                  key: GOOGLE_FAIL
                  name: hiedu-k8s-deployment-config-dci7
            - name: CRYPTO_KEY
              valueFrom:
                configMapKeyRef:
                  key: CRYPTO_KEY
                  name: hiedu-k8s-deployment-config-dci7
            - name: CRYPTO_IV
              valueFrom:
                configMapKeyRef:
                  key: CRYPTO_IV
                  name: hiedu-k8s-deployment-config-dci7
          image: yuripbong3/hiedu:0.128.99-pre-dev
          imagePullPolicy: IfNotPresent
          name: hiedu-sha256-1
          resources:
            limits:
              ephemeral-storage: 512Mi
            requests:
              cpu: 250m
              ephemeral-storage: 512Mi
              memory: 512Mi
          securityContext:
            capabilities:
              drop:
                - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/arch
          operator: Equal
          value: amd64
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: "2025-05-13T16:04:21Z"
      lastUpdateTime: "2025-05-13T16:09:37Z"
      message: ReplicaSet "hiedu-k8s-deployment-59d6888d68" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-05-17T19:28:02Z"
      lastUpdateTime: "2025-05-17T19:28:02Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
  observedGeneration: 8
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
