manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "hiedu-backend-config"}'
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: hiedu-certificate
  labels:
    argocd.argoproj.io/instance: hiedu-argo
  creationTimestamp: "2025-05-24T16:05:42Z"
  finalizers:
    - networking.gke.io/ingress-finalizer-V2
  name: hiedu-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: hiedu-k8s-service
      port:
        number: 80
  rules:
    - host: hiedu.site
      http:
        paths:
          - backend:
              service:
                name: hiedu-k8s-service
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 34.110.168.60
